Frontend changes to display sentimental words

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -33,7 +33,7 @@
               <!--<span class="icon-bar"></span>-->
             <!--</button>-->
 
-            <a class="navbar-brand" href="#/">twitterApp</a>
+            <a class="navbar-brand" href="#/">Twitter Sentiment Analyzer</a>
           </div>
 
           <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
