minor UI changes - added footer

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <!--<p><span class="glyphicon glyphicon-heart"></span></p>-->
+        <p>Built with <span class="glyphicon glyphicon-heart"></span> by <a target="_blank" href="https://www.github.com/vishwajeetv">@vishwajeetv</a></p>
       </div>
     </div>
 
