--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -34,7 +34,7 @@
               <!--<span class="icon-bar"></span>-->
             <!--</button>-->
 
-            <a class="navbar-brand" href="#/">Twitter Sentiment Analyzer</a>
+            <a class="navbar-brand" href="#/">Real-time Twitter Sentiment Analyzer</a>
           </div>
 
           <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
