--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <meta name="description" content="">
+    <meta name="Twitter Sentiment Analyzer" content="A real-time Twitter Sentiment Analyzer">
     <meta name="viewport" content="width=device-width">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -37,14 +39,17 @@
             <a class="navbar-brand" href="#/">Real-time Twitter Sentiment Analyzer</a>
           </div>
 
-          <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
-
+          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li> <a target="_blank" href="https://www.github.com/vishwajeetv/twitter-sentiment-analysis"> Source code </a>
+              </li>
+              </ul>
             <!--<ul class="nav navbar-nav">-->
               <!--<li class="active"><a href="#/">Home</a></li>-->
               <!--<li><a ng-href="#/about">About</a></li>-->
               <!--<li><a ng-href="#/">Contact</a></li>-->
             <!--</ul>-->
-          <!--</div>-->
+          </div>
         </div>
       </div>
     </div>
@@ -55,7 +60,8 @@
 
     <div class="footer">
       <div class="container">
-        <p>Built with <span class="glyphicon glyphicon-heart"></span> by <a target="_blank" href="https://www.github.com/vishwajeetv">@vishwajeetv</a></p>
+        <p>Built with <span class="glyphicon glyphicon-heart"></span> by <a target="_blank" href="https://www.twitter.com/vishwajeetv">@vishwajeetv</a><br>
+        </p>
       </div>
     </div>
 
@@ -86,6 +92,7 @@
     <script src="bower_components/restangular/dist/restangular.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
