cosmetic changes, profile links added

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -41,8 +41,18 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li> <a target="_blank" href="https://www.github.com/vishwajeetv/twitter-sentiment-analysis"> Source code </a>
+              <li>
+                <a target="_blank" href="https://www.github.com/vishwajeetv/twitter-sentiment-analysis">
+                  Source code <i class="fa fa-github"></i> </a>
+
+
+
               </li>
+
+              <li><a target="_blank" href="https://www.vishwajeetv.com/">vishwajeetv.com</a> </li>
+              <li><a target="_blank" href="https://www.twitter.com/vishwajeetv"><i class="fa fa-twitter"></i> </a> </li>
+              <li><a target="_blank" href="https://www.github.com/vishwajeetv"><i class="fa fa-github"></i> </a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/vishwajeetv"><i class="fa fa-linkedin"></i> </a></li>
               </ul>
             <!--<ul class="nav navbar-nav">-->
               <!--<li class="active"><a href="#/">Home</a></li>-->
@@ -60,7 +70,7 @@
 
     <div class="footer">
       <div class="container">
-        <p>Built with <span class="glyphicon glyphicon-heart"></span> by <a target="_blank" href="https://www.twitter.com/vishwajeetv">@vishwajeetv</a><br>
+
         </p>
       </div>
     </div>
