homepage responsive navbar fixed

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -30,12 +30,13 @@
         <div class="container">
           <div class="navbar-header">
 
-            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">-->
-              <!--<span class="sr-only">Toggle navigation</span>-->
-              <!--<span class="icon-bar"></span>-->
-              <!--<span class="icon-bar"></span>-->
-              <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span><a target="_blank" href="https://www.vishwajeetv.com/">vishwajeetv.com</a> </span>
+              <span><a target="_blank" href="https://www.twitter.com/vishwajeetv"><i class="fa fa-twitter"></i> </a> </span>
+              <span><a target="_blank" href="https://www.github.com/vishwajeetv"><i class="fa fa-github"></i> </a></span>
+              <span><a target="_blank" href="https://www.linkedin.com/vishwajeetv"><i class="fa fa-linkedin"></i> </a></span>
+            </button>
 
             <a class="navbar-brand" href="#/">Real-time Twitter Sentiment Analyzer</a>
           </div>
